添加localstorage保存用户信息、播放列表、最后播放的歌曲

--- a/package.json
+++ b/package.json
@@ -72,12 +72,24 @@
     "net/data"
   ],
   "dependencies": {
+    "@applemusic-like-lyrics/core": "^0.2.0",
+    "@applemusic-like-lyrics/vue": "^0.2.0",
     "@neteaseapireborn/api": "^4.29.13",
+    "@pixi/app": "^7.4.3",
+    "@pixi/core": "^7.4.3",
+    "@pixi/display": "^7.4.3",
+    "@pixi/filter-blur": "^7.4.3",
+    "@pixi/filter-bulge-pinch": "^5.1.1",
+    "@pixi/filter-color-matrix": "^7.4.3",
+    "@pixi/sprite": "^7.4.3",
     "@vueuse/core": "^14.0.0",
     "element-plus": "^2.11.7",
     "gsap": "^3.13.0",
+    "jss": "^10.10.0",
+    "jss-preset-default": "^10.10.0",
     "motion-v": "^1.7.4",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
