--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "@applemusic-like-lyrics/core": "^0.2.0",
     "@applemusic-like-lyrics/vue": "^0.2.0",
+    "@electron/remote": "^2.1.3",
     "@neteaseapireborn/api": "^4.29.13",
     "@pixi/app": "^7.4.3",
     "@pixi/core": "^7.4.3",
@@ -83,7 +84,7 @@
     "@pixi/filter-color-matrix": "^7.4.3",
     "@pixi/sprite": "^7.4.3",
     "@vueuse/core": "^14.0.0",
-    "element-plus": "^2.11.7",
+    "element-plus": "^2.11.8",
     "gsap": "^3.13.0",
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
