--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
+    "vuedraggable": "^4.1.0",
     "wait-on": "9.0.3"
   },
   "devDependencies": {
