--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "polomusic",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "private": true,
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "license": "ISC",
@@ -23,7 +23,7 @@
     "pkgwin": "pkg . -t node18-win-x64 -C GZip -o bin/app --no-bytecode",
     "pkglinux": "pkg . -t node18-linux-x64 -C GZip -o bin/app --no-bytecode",
     "pkgmacos": "pkg . -t node18-macos-x64 -C GZip -o bin/app --no-bytecode",
-    "electron:build": "vite build && electron-builder"
+    "electron:build": "vite build && electron-builder -p always "
   },
   "bin": "net/app.js",
   "pkg": {
@@ -75,6 +75,8 @@
   "dependencies": {
     "@electron/remote": "^2.1.3",
     "axios": "^1.13.2",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.6.2",
     "husky": "^9.1.7",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.7.1",
@@ -124,25 +126,25 @@
       "package.json"
     ],
     "win": {
-      "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        }
-      ],
-      "artifactName": "${productName}-Setup-${version}.${ext}"
+      "target": "nsis"
     },
     "nsis": {
       "oneClick": false,
       "perMachine": false,
       "allowToChangeInstallationDirectory": true,
-      "deleteAppDataOnUninstall": true
+      "deleteAppDataOnUninstall": true,
+      "artifactName": "${productName}-Setup-${version}.${ext}"
     },
     "asar": true,
     "asarUnpack": [
       "**/node_modules/node-windows/**/*"
+    ],
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "smiling11123",
+        "repo": "PoloMusic"
+      }
     ]
   }
 }
