--- a/package.json
+++ b/package.json
@@ -75,9 +75,13 @@
   "dependencies": {
     "@electron/remote": "^2.1.3",
     "axios": "^1.13.2",
+    "better-sqlite3": "^12.5.0",
     "electron-log": "^5.4.3",
+    "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.6.2",
     "husky": "^9.1.7",
+    "md5": "^2.3.0",
+    "music-metadata": "^11.10.3",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.22",
